[project]
name = "llm-router"
version = "0.1.0"
description = "Intelligent LLM router for Ollama models"
requires-python = ">=3.9"
dependencies = [
    "ollama>=0.3.0",
    "click>=8.1.0",
]

[project.scripts]
llm-router = "llm_router.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
]
